--- a/views/users/myProfile.pug
+++ b/views/users/myProfile.pug
@@ -29,7 +29,7 @@ block contenido
                     p(class="text-lg text-secondary-gray")= userProfile.username
                 
                 if user && user.id != userProfile.id
-                    a#sendMessage(href=`/chat?new-message=true&touser=${userProfile.username}` class="bg-principal-gray text-white rounded-full mx-[3%] grid place-content-center w-14 h-14 -mt-10 hover:opacity-90")
+                    //a#sendMessage(href=`/chat?new-message=true&touser=${userProfile.username}` class="bg-principal-gray text-white rounded-full mx-[3%] grid place-content-center w-14 h-14 -mt-10 hover:opacity-90")
                         i(class="fa-regular fa-envelope text-2xl")
         
         #options(class="mt-16 mx-[3%]")  
