--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -2,7 +2,8 @@ extends ../layout/index
 
 block contenido
     div.flex.h-screen
-        div(class="w-1/2 grid place-content-center") 
+        div(class="w-1/2 bg-white") 
+            include ../layout/header 
             main.flex.items-center.flex-col.mx-24
                 .mt-10.mb-5
                     h2.text-3xl.text-hard-gray.text-center Bienvenido a 
@@ -43,7 +44,7 @@ block contenido
                     a(href="/auth/signup").font-bold Registrate
         
         aside(class="w-1/2 bg-cover bg-center bg-no-repeat" style=`background-image: url(${imageUrl})`)
-            p(class="absolute bottom-8 right-8 text-white") Fotografía de 
+            //p(class="absolute bottom-8 right-8 text-white") Fotografía de 
                 span.font-bold= nameUserPhoto
                 
 block scripts 
