--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -2,7 +2,7 @@ extends ../layout/index
 
 block contenido
     div.flex.h-screen
-        div(class="w-1/2") 
+        div(class="w-1/2 bg-white") 
             include ../layout/header 
             main.flex.flex-col.mx-24
                 .mt-10.mb-5
@@ -46,6 +46,6 @@ block contenido
                     a(href="/auth/login").font-bold Inicia Sesion
         
         aside(class="w-1/2 bg-cover bg-center bg-no-repeat" style=`background-image: url(${imageUrl})`)
-            p(class="absolute bottom-8 right-8 text-white") Fotografía de 
+            //p(class="absolute bottom-8 right-8 text-white") Fotografía de 
                 span.font-bold= nameUserPhoto
 
