--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -2,8 +2,7 @@ extends ../layout/index
 
 block contenido
     div.flex.h-screen
-        div(class="w-1/2 bg-white") 
-            include ../layout/header 
+        div(class="w-1/2 grid place-content-center") 
             main.flex.items-center.flex-col.mx-24
                 .mt-10.mb-5
                     h2.text-3xl.text-hard-gray.text-center Bienvenido a 
